Mapped the visibility public/private.

--- a/view/common/item-sidebar.phtml
+++ b/view/common/item-sidebar.phtml
@@ -23,6 +23,9 @@
             </li>
        <?php endif; ?>
        
+        <li data-flag="column-ispublic" data-flag-type="resource-data">
+            <a href="#" class="button"><span><?php echo $this->translate('Visibility public/private'); ?></span></a>
+        </li>
     </ul>
         
     <div class='item-mapping options'>
