--- a/view/common/resource-sidebar.phtml
+++ b/view/common/resource-sidebar.phtml
@@ -15,5 +15,8 @@
             <a href="#" class="button"><span><?php echo $this->translate('Owner email address'); ?></span></a>
         </li>
        <?php endif; ?>
+        <li data-flag="column-ispublic" data-flag-type="resource-data">
+            <a href="#" class="button"><span><?php echo $this->translate('Visibility public/private'); ?></span></a>
+        </li>
     </ul>
 </div>
