--- a/view/common/item-sidebar.phtml
+++ b/view/common/item-sidebar.phtml
@@ -6,25 +6,22 @@
     <p><?php echo $this->translate("Data from this column applies to the entire item being imported."); ?></p>
     <p><?php echo $this->translate("Settings here will override any corresponding settings in Basic import settings."); ?></p>
     <ul>
-        <li data-flag='column-itemset-id' data-flag-type='item-data'>
-            <a href='#' class='button'><span><?php echo $this->translate("Item set ID"); ?></span></a>
+        <li data-flag="column-itemset-id" data-flag-type="resource-data">
+            <a href="#" class="button"><span><?php echo $this->translate('Item set ID'); ?></span></a>
         </li>
-        <li data-flag='column-resourcetemplate' data-flag-type='item-data'>
-            <a href='#' class='button'><span><?php echo $this->translate("Resource template name"); ?></span></a>
+        <li data-flag="column-resourcetemplate" data-flag-type="resource-data">
+            <a href="#" class="button"><span><?php echo $this->translate('Resource template name'); ?></span></a>
         </li>
-        <li data-flag='column-resourceclass' data-flag-type='item-data'>
-            <a href='#' class='button'><span><?php echo $this->translate("Resource class term"); ?></span></a>
+        <li data-flag="column-resourceclass" data-flag-type="resource-data">
+            <a href="#" class="button"><span><?php echo $this->translate('Resource class term'); ?></span></a>
         </li>
-        
-       <?php if( ($userRole == 'global_admin') || ($userRole == 'site_admin')): ?>
-
-            <li data-flag='column-owneremail'>
-                <a href='#' class='button'><span><?php echo $this->translate("Owner email address"); ?></span></a>
-            </li>
-       <?php endif; ?>
-       
+        <?php if (in_array($userRole, ['global_admin', 'site_admin'])): ?>
+        <li data-flag="column-owneremail" data-flag-type="resource-data">
+            <a href="#" class="button"><span><?php echo $this->translate('Owner email address'); ?></span></a>
+        </li>
+        <?php endif; ?>
     </ul>
-        
+
     <div class='item-mapping options'>
         <h4><?php echo $this->translate("Options"); ?></h4>
         <ul>
