Fixed the space in html for the sidebar title.

--- a/view/common/csv-property-selector.phtml
+++ b/view/common/csv-property-selector.phtml
@@ -4,7 +4,7 @@ $escape = $this->plugin('escapeHtml');
 <div id="property-selector" class='selector sidebar <?php echo $state; ?>'>
     <a href="#" class="sidebar-close o-icon-close"><span class="screen-reader-text"><?php echo $this->translate('Close'); ?></span></a>
     <?php if ($propertySelectorText) :?>
-    <h3><?php echo $escape($this->translate($propertySelectorText)); ?></h3>
+    <h3><?php echo $escape($propertySelectorText); ?></h3>
     <?php else: ?>
     <h3><?php echo $this->translate('Click on a property to add it to the edit panel.'); ?></h3>
     <?php endif; ?>
