--- a/view/csv-import/index/index.phtml
+++ b/view/csv-import/index/index.phtml
@@ -1,6 +1,8 @@
 <?php
 $form->prepare();
 $escapeHtml = $this->plugin('escapeHtml');
+$this->headLink()->appendStylesheet($this->assetUrl('css/csvimport.css', 'CSVImport'));
+$this->headScript()->appendFile($this->assetUrl('js/csvimport.js', 'CSVImport'));
 ?>
 
 <?php echo $this->pageTitle($this->translate('Import Settings'), 1, $this->translate('CSV Import')); ?>
