--- a/view/csv-import/index/map.phtml
+++ b/view/csv-import/index/map.phtml
@@ -2,8 +2,8 @@
 $form->prepare();
 $escapeHtml = $this->plugin('escapeHtml');
 $this->htmlElement('body')->appendAttribute('class', 'no-section-hashes');
-$this->headScript()->appendFile($this->assetUrl('js/csvimport.js', 'CSVImport'));
 $this->headLink()->appendStylesheet($this->assetUrl('css/csvimport.css', 'CSVImport'));
+$this->headScript()->appendFile($this->assetUrl('js/csvimport.js', 'CSVImport'));
 ?>
 
 <?php echo $this->pageTitle($this->translate('Import Settings'), 1, $this->translate('CSV Import')); ?>
@@ -42,15 +42,14 @@ $this->headLink()->appendStylesheet($this->assetUrl('css/csvimport.css', 'CSVImp
                 </td>
                 <td class="mapping element">
                     <ul class="mappings elements">
-                    <?php if(array_key_exists($index, $automaps)): ?>
-                    <?php $property = $automaps[$index]; ?>
-                        <li class="mapping" data-property-id="<?php echo $property->id(); ?>">
-                            <?php echo $this->translate($property->label()); ?>
+                    <?php if (!empty($automaps[$index])): ?>
+                        <li class="mapping <?php echo $automaps[$index]['class']; ?>"<?php echo $automaps[$index]['special']; ?>>
+                            <?php echo $this->translate($automaps[$index]['label']); ?>
                             <ul class="actions">
-                                <li><a aria-label="Remove mapping" title="Remove mapping" class="o-icon-delete remove-mapping" href="#" style="display: inline;"></a></li>
-                                <li><a aria-label="Undo remove mapping" title="Undo remove mapping" class="o-icon-undo restore-mapping" href="#" style="display: none;"></a></li>
+                                <li><a aria-label="<?php echo $escapeHtml($this->translate('Remove mapping')); ?>" title="<?php echo $escapeHtml($this->translate('Remove mapping')); ?>" class="o-icon-delete remove-mapping" href="#" style="display: inline;"></a></li>
+                                <li><a aria-label="<?php echo $escapeHtml($this->translate('Undo remove mapping')); ?>" title="<?php echo $escapeHtml($this->translate('Undo remove mapping')); ?>" class="o-icon-undo restore-mapping" href="#" style="display: none;"></a></li>
                             </ul>
-                            <input value="<?php echo $property->id(); ?>" name="column-property[<?php echo $index; ?>][]" type="hidden">
+                            <input name="<?php echo $automaps[$index]['name'] === 'media' ? '' : 'column-'; echo $automaps[$index]['name'] . '[' . $index . ']' . ($automaps[$index]['multiple'] ? '[]' : ''); ?>" value="<?php echo $automaps[$index]['value']; ?>" type="hidden" />
                         </li>
                     <?php endif; ?>
                     </ul>
