--- a/view/common/resource-sidebar.phtml
+++ b/view/common/resource-sidebar.phtml
@@ -3,6 +3,7 @@
     <h3><?php echo $this->translate('Resource data:'); ?></h3>
     <p><?php echo $this->translate('Data from this column applies to the entire resource being imported.'); ?></p>
     <p><?php echo $this->translate('Settings here will override any corresponding settings in Basic import settings.'); ?></p>
+    <h4><?php echo $this->translate('Generic data'); ?></h4>
     <ul>
         <li data-flag="column-resourcetemplate" data-flag-type="resource-data">
             <a href="#" class="button"><span><?php echo $this->translate('Resource template name'); ?></span></a>
@@ -18,9 +19,57 @@
         <li data-flag="column-ispublic" data-flag-type="resource-data">
             <a href="#" class="button"><span><?php echo $this->translate('Visibility public/private'); ?></span></a>
         </li>
-        <?php if ($resourceType === 'item_sets'): ?>
+    </ul>
+    <h4>
+    <?php
+    $resourceTypeLabels = [
+        'items' => $this->translate('items'),
+        'item_sets' => $this->translate('item sets'),
+        'media' => $this->translate('media'),
+    ];
+    echo isset($resourceTypeLabels[$resourceType])
+        ? sprintf($this->translate('Specific data for %s'), $resourceTypeLabels[$resourceType])
+        : $this->translate('Specific data');
+    ?>
+    </h4>
+    <ul>
+        <?php if (empty($resourceType) || $resourceType === 'item_sets'): ?>
         <li data-flag="column-isopen" data-flag-type="resource-data">
             <a href="#" class="button"><span><?php echo $this->translate('Open/closed to additions'); ?></span></a>
+        </li>
+        <?php endif; ?>
+        <?php if (empty($resourceType) || $resourceType === 'media'): ?>
+        <li>
+        <?php echo $this->translate('There must be an item identifier to create a media, or a media identifier to update or delete it.')?>
+        <?php echo $this->translate('This is generally "dcterms:identifier", but it may be an internal id.')?>
+        </li>
+        <li data-flag="column-resource_identifier_property" data-flag-type="option">
+            <?php echo $this->propertySelect([
+                'name' => 'column-resource_identifier_property',
+                'options' => [
+                    'empty_option' => $this->translate('Select below'),
+                    'term_as_value' => false,
+                    'prepend_value_options' => [
+                        'internal_id' => $this->translate('Internal id'),
+                    ],
+                ],
+                'attributes' => [
+                    'id' => 'column-resource_identifier_property',
+                    'value' => $this->userSetting('csv_import_identifier_property', ''),
+                    'class' => 'chosen-select',
+                    'data-placeholder' => $this->translate('Select below'),
+                ],
+            ]); ?>
+        </li>
+        <li data-flag="column-resource_identifier_type" data-flag-type="option">
+            <select name="column-resource_identifier_type" id="column-resource_identifier_type" required="required">
+                <option value="resources" selected="selected"><?php echo $this->translate('Resource'); ?></option>
+                <option value="items"><?php echo $this->translate('Item'); ?></option>
+                <option value="media"><?php echo $this->translate('Media'); ?></option>
+            </select>
+        </li>
+        <li data-flag="column-resource_identifier" data-flag-type="resource-data">
+            <a href="#" class="button"><span><?php echo $this->translate('Set resource identifier'); ?></span></a>
         </li>
         <?php endif; ?>
     </ul>
