--- a/asset/css/csvimport.css
+++ b/asset/css/csvimport.css
@@ -91,7 +91,9 @@ li.option.delete {
     width: 100px;
 }
 
-#media-sidebar a {
+#resource-data a,
+#property-selector a,
+#media-source a {
     text-align: left;
 }
 
@@ -121,7 +123,7 @@ li.column-multivalue {
     display: flex;
 }
 
-.item-mapping li.column-multivalue {
+.resource-mapping li.column-multivalue {
     display: block;
 }
 
