Fixed alt text in the map form.

--- a/view/csv-import/index/map.phtml
+++ b/view/csv-import/index/map.phtml
@@ -72,7 +72,7 @@ $this->headScript()->appendFile($this->assetUrl('js/csvimport.js', 'CSVImport'))
                                     <a aria-label="<?php echo $escapeHtml($this->translate('Remove import as Omeka S Resource ID')); ?>" title="<?php echo $escapeHtml($this->translate('Remove import as Omeka S Resource ID')); ?>" class="o-icon-delete remove-option" href="#" style="display: inline;"></a>
                                 </li>
                                 <li>
-                                    <a aria-label="<?php echo $escapeHtml($this->translate('Undo remove as URL')); ?>" title="<?php echo $escapeHtml($this->translate('Undo remove as URL')); ?>" class="o-icon-undo restore-option" href="#" style="display: none;"></a>
+                                    <a aria-label="<?php echo $escapeHtml($this->translate('Undo remove import as Omeka S Resource ID')); ?>" title="<?php echo $escapeHtml($this->translate('Undo remove import as Omeka S Resource ID')); ?>" class="o-icon-undo restore-option" href="#" style="display: none;"></a>
                                 </li>
                             </ul>
                             <input type='hidden' disabled='disabled' value='1' class='column-option column-reference' name='column-reference[<?php echo $index; ?>]'></input>
@@ -84,7 +84,7 @@ $this->headScript()->appendFile($this->assetUrl('js/csvimport.js', 'CSVImport'))
                                     <a aria-label="<?php echo $escapeHtml($this->translate('Remove multivalue')); ?>" title="<?php echo $escapeHtml($this->translate('Remove multivalue')); ?>" class="o-icon-delete remove-option" href="#" style="display: inline;"></a>
                                 </li>
                                 <li>
-                                    <a aria-label="<?php echo $escapeHtml($this->translate('Undo remove as URL')); ?>" title="<?php echo $escapeHtml($this->translate('Undo remove as URL')); ?>" class="o-icon-undo restore-option" href="#" style="display: none;"></a>
+                                    <a aria-label="<?php echo $escapeHtml($this->translate('Undo remove multivalue')); ?>" title="<?php echo $escapeHtml($this->translate('Undo remove multivalue')); ?>" class="o-icon-undo restore-option" href="#" style="display: none;"></a>
                                 </li>
                             </ul>
                             <input type='hidden' disabled='disabled' value='1' class='column-option column-multivalue' name='column-multivalue[<?php echo $index; ?>]'></input>
@@ -97,7 +97,7 @@ $this->headScript()->appendFile($this->assetUrl('js/csvimport.js', 'CSVImport'))
                                     <a aria-label="<?php echo $escapeHtml($this->translate('Remove language')); ?>" title="<?php echo $escapeHtml($this->translate('Remove language')); ?>" class="o-icon-delete remove-option remove-column-language" href="#" style="display: inline;"></a>
                                 </li>
                                 <li>
-                                    <a aria-label="<?php echo $escapeHtml($this->translate('Undo remove as URL')); ?>" title="<?php echo $escapeHtml($this->translate('Undo remove as URL')); ?>" class="o-icon-undo restore-option" href="#" style="display: none;"></a>
+                                    <a aria-label="<?php echo $escapeHtml($this->translate('Undo remove language')); ?>" title="<?php echo $escapeHtml($this->translate('Undo remove language')); ?>" class="o-icon-undo restore-option" href="#" style="display: none;"></a>
                                 </li>
                             </ul>
                             <input type='hidden' disabled='disabled' value='' class='column-option column-language' name='column-language[<?php echo $index; ?>]'></input>
