--- a/view/csv-import/index/map.phtml
+++ b/view/csv-import/index/map.phtml
@@ -59,7 +59,7 @@ $pageTitle = isset($resourceTypeLabels[$resourceType])
                                 <li><a aria-label="<?php echo $escapeHtml($this->translate('Remove mapping')); ?>" title="<?php echo $escapeHtml($this->translate('Remove mapping')); ?>" class="o-icon-delete remove-mapping" href="#" style="display: inline;"></a></li>
                                 <li><a aria-label="<?php echo $escapeHtml($this->translate('Undo remove mapping')); ?>" title="<?php echo $escapeHtml($this->translate('Undo remove mapping')); ?>" class="o-icon-undo restore-mapping" href="#" style="display: none;"></a></li>
                             </ul>
-                            <input name="<?php echo $automaps[$index]['name'] === 'media' ? '' : 'column-'; echo $automaps[$index]['name'] . '[' . $index . ']' . ($automaps[$index]['multiple'] ? '[]' : ''); ?>" value="<?php echo $escapeHtml($automaps[$index]['value']); ?>" type="hidden" />
+                            <input name="<?php echo $automaps[$index]['name'] === 'media-source' ? '' : 'column-'; echo $automaps[$index]['name'] . '[' . $index . ']' . ($automaps[$index]['multiple'] ? '[]' : ''); ?>" value="<?php echo $escapeHtml($automaps[$index]['value']); ?>" type="hidden" />
                         </li>
                     <?php endif; ?>
                     </ul>
