--- a/view/common/resource-sidebar.phtml
+++ b/view/common/resource-sidebar.phtml
@@ -48,12 +48,12 @@
 
             <?php if (empty($resourceType) || $resourceType === 'media'): ?>
             <li>
-            <?php echo $this->translate('There must be an item identifier to create a media, or a media identifier to update or delete it.')?>
+            <?php echo $this->translate('There must be an item identifier to create a media.')?>
             <?php echo $this->translate('This is generally "dcterms:identifier", but it may be an internal id.')?>
             </li>
-            <li data-flag="column-resource_identifier_property" data-flag-type="option">
+            <li data-flag="column-items_property" data-flag-type="option">
                 <?php echo $this->propertySelect([
-                    'name' => 'column-resource_identifier_property',
+                    'name' => 'column-items_property',
                     'options' => [
                         'empty_option' => $this->translate('Select below'),
                         'term_as_value' => false,
@@ -62,22 +62,15 @@
                         ],
                     ],
                     'attributes' => [
-                        'id' => 'column-resource_identifier_property',
-                        'value' => $this->userSetting('csv_import_identifier_property', ''),
+                        'id' => 'column-items_property',
+                        'value' => $this->userSetting('csv_import_identifier_property', 'internal_id'),
                         'class' => 'chosen-select',
                         'data-placeholder' => $this->translate('Select below'),
                     ],
                 ]); ?>
             </li>
-            <li data-flag="column-resource_identifier_type" data-flag-type="option">
-                <select name="column-resource_identifier_type" id="column-resource_identifier_type" required="required">
-                    <option value="resources" selected="selected"><?php echo $this->translate('Resource'); ?></option>
-                    <option value="items"><?php echo $this->translate('Item'); ?></option>
-                    <option value="media"><?php echo $this->translate('Media'); ?></option>
-                </select>
-            </li>
-            <li data-flag="column-resource_identifier" data-flag-type="resource-data">
-                <a href="#" class="button"><span><?php echo $this->translate('Set resource identifier'); ?></span></a>
+            <li data-flag="column-items" data-flag-type="resource-data">
+                <a href="#" class="button"><span><?php echo $this->translate('Set item'); ?></span></a>
             </li>
             <?php endif; ?>
         </ul>
