Added a resource button to identify the internal id column.

--- a/view/common/resource-sidebar.phtml
+++ b/view/common/resource-sidebar.phtml
@@ -6,6 +6,9 @@
     <div class="resource-mapping mappings">
         <h4><?php echo $this->translate('Generic data'); ?></h4>
         <ul>
+            <li data-flag="column-resource" data-value="internal_id" data-flag-type="resource-data">
+                <a href="#" class="button"><span><?php echo $this->translate('Internal id'); ?></span></a>
+            </li>
             <li data-flag="column-resource_template" data-flag-type="resource-data">
                 <a href="#" class="button"><span><?php echo $this->translate('Resource template name'); ?></span></a>
             </li>
