--- a/view/csv-import/index/map.phtml
+++ b/view/csv-import/index/map.phtml
@@ -3,6 +3,7 @@ $form->prepare();
 $escapeHtml = $this->plugin('escapeHtml');
 $this->htmlElement('body')->appendAttribute('class', 'no-section-hashes');
 $this->headLink()->appendStylesheet($this->assetUrl('css/csvimport.css', 'CSVImport'));
+$this->headScript()->appendFile($this->assetUrl('js/resource-form.js', 'Omeka'));
 $this->headScript()->appendFile($this->assetUrl('js/csvimport.js', 'CSVImport'));
 
 $resourceTypeLabels = [
