--- a/view/csv-import/index/map.phtml
+++ b/view/csv-import/index/map.phtml
@@ -119,12 +119,12 @@ $pageTitle = isset($resourceTypeLabels[$resourceType])
                 </td>
                 <td>
                     <ul class='sidebar-chooser'>
-                        <?php foreach($mappings as $mappingClass): ?>
+                        <?php foreach ($mappings as $mapping): ?>
                         <li>
                             <a href='#'
                                class='button'
-                               data-sidebar='<?php echo $this->translate($mappingClass::getName()); ?>'
-                               data-column='<?php echo $escapeHtml($column); ?>'><?php echo $this->translate($mappingClass::getLabel()); ?></a>
+                               data-sidebar='<?php echo $this->translate($mapping->getName()); ?>'
+                               data-column='<?php echo $escapeHtml($column); ?>'><?php echo $this->translate($mapping->getLabel()); ?></a>
                         </li>
                         <?php endforeach; ?>
                     </ul>
@@ -133,8 +133,8 @@ $pageTitle = isset($resourceTypeLabels[$resourceType])
             <?php endforeach; ?>
         </tbody>
     </table>
-    <?php foreach($mappings as $mappingClass) {
-        echo $mappingClass::getSidebar($this);
+    <?php foreach($mappings as $mapping) {
+        echo $mapping->getSidebar($this);
     }
     ?>
 </fieldset>
