--- a/view/csv-import/index/map.phtml
+++ b/view/csv-import/index/map.phtml
@@ -11,6 +11,7 @@ $resourceTypeLabels = [
     'items' => $this->translate('items'),
     'item_sets' => $this->translate('item sets'),
     'media' => $this->translate('media'),
+    'resources' => $this->translate('resources'),
     'users' => $this->translate('users'),
 ];
 $pageTitle = isset($resourceTypeLabels[$resourceType])
