--- a/view/csv-import/index/past-imports.phtml
+++ b/view/csv-import/index/past-imports.phtml
@@ -18,10 +18,10 @@ $this->headLink()->appendStylesheet($this->assetUrl('css/csvimport.css', 'CSVImp
         <thead>
             <tr>
                 <th><?php echo $escape($this->translate('Undo?'));?></th>
-                <th><?php echo $this->sortLink($this->translate('Job ID'), 'id');?></th>
+                <th><?php echo $this->sortLink($escape($this->translate('Date')), 'id');?></th>
+                <th><?php echo $escape($this->translate('Action'));?></th>
                 <th><?php echo $escape($this->translate('Comment'));?></th>
-                <th><?php echo $escape($this->translate('Imported content'));?></th>
-                <th><?php echo $escape($this->translate('Date'));?></th>
+                <th><?php echo $escape($this->translate('Result'));?></th>
                 <th><?php echo $escape($this->translate('Status'));?></th>
                 <th><?php echo $escape($this->translate('Owner'));?></th>
             </tr>
@@ -30,35 +30,69 @@ $this->headLink()->appendStylesheet($this->assetUrl('css/csvimport.css', 'CSVImp
         <?php foreach ($imports as $import): ?>
         <?php $job = $import->job(); ?>
         <?php $undoJob = $import->undoJob(); ?>
+        <?php $jobArgs = $job->args(); ?>
+        <?php $isCreate = @$jobArgs['action'] === \CSVImport\Job\Import::ACTION_CREATE; ?>
         <tr class="<?php echo $undoJob ? 'undone' : ''; ?>" >
             <td>
-                <input type='checkbox' name='jobs[]' value='<?php echo $job->id(); ?>' />
+                <input type="checkbox" name="jobs[]" value="<?php echo $job->id(); ?>"<?php if (!$isCreate || $undoJob) echo ' disabled="true"'; ?>/>
             </td>
-            <td><?php echo $job->link($job->id()); ?></td>
+            <td>
+                <?php echo $escape($this->i18n()->dateFormat($job->started())); ?>
+            </td>
+            <td>
+                <span class="csv-import-action">
+                    <?php echo $escape($this->translate(ucfirst(@$jobArgs['action'] ?: 'create'))); ?>
+                </span>
+                <br />
+                <span class="csv-import-job-param">
+                    <?php echo $this->hyperlink($this->translate('Parameters'), $this->url('admin/id', ['controller' => 'job', 'action' => 'show', 'id' => $job->id()]), ['target' => '_blank']); ?>
+                </span>
+                <?php if ($job->log()): ?>
+                /
+                <span class="csv-import-job-log">
+                    <?php echo $this->hyperlink($this->translate('Log'), $this->url('admin/id', ['controller' => 'job', 'action' => 'log', 'id' => $job->id()]), ['target' => '_blank']); ?>
+                </span>
+                <?php endif; ?>
+            </td>
             <td class='comment'>
                 <?php echo $import->comment(); ?>
-                <?php if($import->hasErr()): ?>
-                    <p><?php echo $this->translate("Problems were detected with the import. Check the job's log for details."); ?></p>
+                <?php if ($import->hasErr()): ?>
+                    <p><?php echo $escape($this->translate("Problems were detected with the import. Check the job's log for details.")); ?></p>
                 <?php endif; ?>
             </td>
             <td>
-                <?php echo $this->translate('Added: ') . $import->addedCount() . ' ' . $this->translate($import->resourceType()); ?>
+                <ul>
+                <?php foreach ($import->stats() as $process => $stat): ?>
+                <?php foreach ($stat as $resourceType => $count): ?>
+                    <li><?php echo $escape(sprintf('%s: %d %s', $this->translate(ucfirst($process)), $count, $this->translate(str_replace('_', ' ', $resourceType)))); ?></li>
+                <?php endforeach; ?>
+                <?php endforeach; ?>
+                </ul>
             </td>
-            <td><?php echo $escape($this->i18n()->dateFormat($job->started())); ?></td>
             <td>
             <?php if ($undoJob) {
                 if ($undoJob->ended()) {
-                    $status = $this->translate('Undone') . ' ' . $escape($this->i18n()->dateFormat($undoJob->ended()));
+                    echo $escape($this->translate('Undone') . ' ' . $this->i18n()->dateFormat($undoJob->ended()));
+                ?>
+                <?php
                 } else {
-                    $status = $this->translate('Undo in progress');
+                    echo $escape($this->translate('Undo in progress'));
                 }
-
-
+                ?>
+                <span class="csv-import-job-param">
+                    <?php echo $this->hyperlink($this->translate('Parameters'), $this->url('admin/id', ['controller' => 'job', 'action' => 'show', 'id' => $undoJob->id()]), ['target' => '_blank']); ?>
+                </span>
+                <?php if ($undoJob->log()): ?>
+                /
+                <span class="csv-import-job-log">
+                    <?php echo $this->hyperlink($this->translate('Log'), $this->url('admin/id', ['controller' => 'job', 'action' => 'log', 'id' => $undoJob->id()]), ['target' => '_blank']); ?>
+                </span>
+                <?php endif; ?>
+            <?php
             } else {
-                $status = $this->translate($job->status());
+                echo $escape($this->translate($job->status()));
             }
             ?>
-            <?php echo $status; ?>
             </td>
             <td><?php echo $this->hyperlink($job->owner()->name(), $this->url('admin/id', array('controller' => 'user', 'action' => 'show', 'id' => $job->owner()->id()))); ?></td>
         </tr>
