--- a/view/csv-import/index/past-imports.phtml
+++ b/view/csv-import/index/past-imports.phtml
@@ -17,8 +17,10 @@ $this->headLink()->appendStylesheet($this->assetUrl('css/csvimport.css', 'CSVImp
     <table class="tablesaw" data-tablesaw-mode="stack">
         <thead>
             <tr>
-                <th><?php echo $escape($this->translate('Undo?'));?></th>
-                <th><?php echo $this->sortLink($escape($this->translate('Date')), 'id');?></th>
+                <th>
+                    <span style="margin: 0 12px"></span>
+                    <?php echo $this->sortLink($escape($this->translate('Date')), 'id');?>
+                </th>
                 <th><?php echo $escape($this->translate('Action'));?></th>
                 <th><?php echo $escape($this->translate('Comment'));?></th>
                 <th><?php echo $escape($this->translate('Result'));?></th>
@@ -34,9 +36,7 @@ $this->headLink()->appendStylesheet($this->assetUrl('css/csvimport.css', 'CSVImp
         <?php $isCreate = @$jobArgs['action'] === \CSVImport\Job\Import::ACTION_CREATE; ?>
         <tr class="<?php echo $undoJob ? 'undone' : ''; ?>" >
             <td>
-                <input type="checkbox" name="jobs[]" value="<?php echo $job->id(); ?>"<?php if (!$isCreate || $undoJob) echo ' disabled="true"'; ?>/>
-            </td>
-            <td>
+                <input type="checkbox" name="jobs[]" value="<?php echo $job->id(); ?>"<?php if (!$isCreate || $undoJob) echo ' disabled="disabled"'; ?>/>
                 <?php echo $escape($this->i18n()->dateFormat($job->started())); ?>
             </td>
             <td>
@@ -70,14 +70,14 @@ $this->headLink()->appendStylesheet($this->assetUrl('css/csvimport.css', 'CSVImp
                 </ul>
             </td>
             <td>
-            <?php if ($undoJob) {
-                if ($undoJob->ended()) {
-                    echo $escape($this->translate('Undone') . ' ' . $this->i18n()->dateFormat($undoJob->ended()));
+            <?php if ($undoJob):
+                if ($undoJob->ended()):
+                    echo $escape(sprintf($this->translate('Undone %s'), $this->i18n()->dateFormat($undoJob->ended())));
                 ?>
                 <?php
-                } else {
+                else:
                     echo $escape($this->translate('Undo in progress'));
-                }
+                endif;
                 ?>
                 <span class="csv-import-job-param">
                     <?php echo $this->hyperlink($this->translate('Parameters'), $this->url('admin/id', ['controller' => 'job', 'action' => 'show', 'id' => $undoJob->id()])); ?>
@@ -89,9 +89,9 @@ $this->headLink()->appendStylesheet($this->assetUrl('css/csvimport.css', 'CSVImp
                 </span>
                 <?php endif; ?>
             <?php
-            } else {
+            else:
                 echo $escape($this->translate($job->status()));
-            }
+            endif;
             ?>
             </td>
             <td><?php echo $this->hyperlink($job->owner()->name(), $this->url('admin/id', array('controller' => 'user', 'action' => 'show', 'id' => $job->owner()->id()))); ?></td>
