--- a/view/csv-import/index/past-imports.phtml
+++ b/view/csv-import/index/past-imports.phtml
@@ -17,8 +17,8 @@ $this->headLink()->appendStylesheet($this->assetUrl('css/csvimport.css', 'CSVImp
     <table class="tablesaw" data-tablesaw-mode="stack">
         <thead>
             <tr>
+                <th><?php echo $escape($this->translate('Undo'));?></th>
                 <th>
-                    <span style="margin: 0 12px"></span>
                     <?php echo $this->sortLink($escape($this->translate('Date')), 'id');?>
                 </th>
                 <th><?php echo $escape($this->translate('Action'));?></th>
@@ -37,6 +37,9 @@ $this->headLink()->appendStylesheet($this->assetUrl('css/csvimport.css', 'CSVImp
         <tr class="<?php echo $undoJob ? 'undone' : ''; ?>" >
             <td>
                 <input type="checkbox" name="jobs[]" value="<?php echo $job->id(); ?>"<?php if (!$isCreate || $undoJob) echo ' disabled="disabled"'; ?>/>
+            </td>
+            <td>
+                
                 <?php echo $escape($this->i18n()->dateFormat($job->started())); ?>
             </td>
             <td>
