--- a/asset/css/csvimport.css
+++ b/asset/css/csvimport.css
@@ -146,3 +146,52 @@ li.column-multivalue {
 .csvimporter.jobs td ul {
     padding-left: 0;
 }
+
+.mapping-group {
+    margin-top: 24px;
+}
+
+.toggle-nav {
+    display: flex;
+    margin-bottom: 6px;
+}
+
+.sidebar .toggle-nav button {
+    width: auto;
+    box-shadow: none;
+    border-radius: 0;
+    background-color: #00000014;
+    color: #676767;
+    border: 1px solid #dfdfdf;
+    margin: 0;
+}
+
+.sidebar .toggle-nav button:hover {
+    box-shadow: none !important;
+}
+
+.sidebar .toggle-nav button:not(:disabled):hover {
+    border: 1px solid #999;
+}
+
+.sidebar .toggle-nav button:disabled {
+    background-color: #0000000a;
+    cursor: default;
+    font-weight: bold;
+}
+
+.sidebar .toggle-nav button:first-child {
+    border-radius: 3px 0 0 3px;
+}
+
+.sidebar .toggle-nav button:last-child {
+    border-radius: 0 3px 3px 0;
+}
+
+.toggle-view {
+    display: none;
+}
+
+.toggle-view.active {
+    display: block;
+}
