--- a/view/common/media-source-sidebar.phtml
+++ b/view/common/media-source-sidebar.phtml
@@ -1,13 +1,13 @@
 <div id="media-source" class="sidebar flags">
+    <div class="confirm-main">
     <a href="#" class="sidebar-close o-icon-close"><span class="screen-reader-text"><?php echo $this->translate('Close'); ?></span></a>
-    <h3><?php echo $this->translate('Media source:'); ?></h3>
-    <ul>
-    <?php foreach($mediaForms as $type=>$mediaForm): ?>
-        <li data-flag="column-media_source" data-value='<?php echo $type; ?>' data-flag-type='media-source'>
-            <a href="#" class="button"><span><?php echo $mediaForm['label']; ?></span></a>
-        </li>
-    <?php endforeach; ?>
-    </ul>
+    <h3><?php echo $this->translate('Media source'); ?></h3>
+    <select name="media-source" data-flag-type="media-source" data-flag-label="<?php echo $this->translate('Media source'); ?>">
+        <option><?php echo $this->translate('Select below'); ?></option>
+        <?php foreach($mediaForms as $type=>$mediaForm): ?>
+        <option value="<?php echo $type; ?>"><?php echo $mediaForm['label']; ?></option>
+        <?php endforeach; ?>
+    </select>
     <div class="media-mapping options">
         <h4><?php echo $this->translate('Options'); ?></h4>
             <ul>
@@ -15,5 +15,9 @@
                     <a href="#" class="button column-multivalue"><span><?php echo $this->translate('Use multivalue separator'); ?></span></a>
                 </li>
             </ul>
+    </div>
+    </div>
+    <div class="confirm-panel">
+        <button type="button"><?php echo $this->translate('Apply changes'); ?></button>
     </div>
 </div>
