Have property selector use confirm panel pattern.

--- a/asset/css/csvimport.css
+++ b/asset/css/csvimport.css
@@ -238,3 +238,7 @@ li.column-multivalue {
 .resource-type-select ~ .mapping:not(.active) {
     display: none;
 }
+
+.selector li.selected {
+    background-color: #0000000a;
+}
